fix intro, ebook version link, and anchor jumping

--- a/ui-bundle/css/style.scss
+++ b/ui-bundle/css/style.scss
@@ -102,7 +102,7 @@ pre.highlight > code {
   }
 }
 
-button.big, a.button.big, a.big {
+button.big, a.button.big, a.button.big:link, a.big, a.big:link {
   user-select: none;
   border: 0;
   display: inline-block;
